fixed text alignment in blocks section

--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ h5{
     font-family: 'Poppins', sans-serif;
     margin: 0;
 }
-.laptop_description P{
+.laptop_description p{
     color: rgba(51, 51, 51, 1);
     font-size: 16px;
     line-height: 24px;
@@ -244,7 +244,16 @@ h5{
 .blocks_description{
     display: flex;
     justify-content: space-between;
-    padding: 55px 135px;
+    align-items: center;
+    padding: 50px 135px;
+}
+.blocks_description .blue_btn{
+    background-color: rgba(0, 128, 128, 0);
+    color: #C86DD7;
+}
+.blocks_description .blue_btn:hover{
+    background-color: #C86DD7;
+    color: white;
 }
 .blocks_description h2{
     margin: 0;
